--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.20",
     "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.6.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
