--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,37 +1,29 @@
-name: User App - Dev
+name: Vercel Production Deployment
 
-on:
-  push:
-    branches:
-      - dev
+env: 
+    VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+    VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-jobs:
-  build:
-    name: Optimized Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+on: 
+    push: 
+        branch:
+        - prod
+      
+jobs: 
+    Deploy-Deployment:
+      runs-on: ubunto-latest
+      steps: 
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "18"
+          - uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: npm install
+          - name: Install Vercel CLI
+             run: npm install --global vercel
 
-      - name: Build project
-        run: npm run build
+          - name: Vercel Pull Environment Information
+              run: vercel pull --yes --enviornment=deployment --tokent=${{ secrets.VERCEL_TOKEN }}
 
-  deploy:
-    name: Netlify Deploy
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to Netlify
-        uses: netlify/actions/cli@master
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-        with:
-          args: deploy --dev
+          - name: Build Project Artifacts
+              run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+
+          - name: Deploy Project Artifacts
+              run: vercel deploy --prebuild --prod --token=${{ secrets.VERCEL_TOKEN }}
