--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -34,4 +34,4 @@ jobs:
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         with:
-          args: deploy --dev
+          args: deploy --prod
