--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,6 @@
     { "src": "/inmates", "dest": "/inmates" },
     { "src": "/dashboard", "dest": "/dashboard" },
     { "src": "/addEditForm", "dest": "/addEditForm" }
-  ]
+  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
